--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -38,9 +38,10 @@
 
         <TextView
             android:id="@+id/num_txtV"
-            android:layout_width="@dimen/item_width"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
+            android:textSize="10dp"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal" />
 
